--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lodash": "^4.17.21"
+		"clsx": "^2.0.0",
+		"cva": "1.0.0-beta.1",
+		"lodash": "^4.17.21",
+		"tailwind-merge": "^2.1.0"
 	}
 }
